<resources>
    <string name="app_name">Name Game</string>

    <string name="mainMenuInstructions">Try matching the WillowTree "\n" Employee to their photo</string>
    <string name="practiceModeBtnTxt">Practice Mode</string>
    <string name="timedModeBtnTxt">Timed Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="employeeNameDescTxt">Employee name</string>
    <string name="employeeImage1DescTxt">Employee image 1</string>
    <string name="employeeImage2DescTxt">Employee image 2</string>
    <string name="employeeImage3DescTxt">Employee image 3</string>
    <string name="employeeImage4DescTxt">Employee image 4</string>
    <string name="employeeImage5DescTxt">Employee image 5</string>
    <string name="employeeImage6DescTxt">Employee image 6</string>
    <string name="internetConnectionErrorMsg">There was a problem fetching the data, please find better signal or try again later.</string>
    <string name="randomizeEmployeesErrorMsg">There was a problem randomly generating a group of employees.</string>
    <string name="loadingImgErrorMsg">There was a problem loading an image.</string>

    <string name="gameOverBtnTxt">OK</string>
    <string name="gameOverTitleTxt">Game Over</string>
    <string name="gameOverBodyTxt">You Scored </string>
</resources>
