<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.gameplay.GameplayFragment">

    <include
        android:id="@+id/gameplayToolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/employeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="Jose Mireles"
        android:contentDescription="@string/employeeNameDescTxt"
        android:textColor="@color/darkGray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameplayToolbar" />

    <!--1-->
    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toTopOf="@+id/frame3"
        app:layout_constraintEnd_toStartOf="@+id/frame2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeName"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/employeeImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/face_ic_dark"
            android:contentDescription="@string/employeeImage1DescTxt" />

        <View
            android:id="@+id/resultView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

    <!--2-->
    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/frame4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/frame1"
        app:layout_constraintTop_toBottomOf="@+id/employeeName"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.15">

        <ImageView
            android:id="@+id/employeeImage2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/face_ic_dark"
            app:layout_constraintVertical_bias="0.15"
            android:contentDescription="@string/employeeImage2DescTxt" />

        <View
            android:id="@+id/resultView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

    <!--3-->
    <FrameLayout
        android:id="@+id/frame3"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/frame5"
        app:layout_constraintStart_toStartOf="@+id/frame1"
        app:layout_constraintTop_toBottomOf="@+id/frame1">

        <ImageView
            android:id="@+id/employeeImage3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/face_ic_dark"
            android:contentDescription="@string/employeeImage3DescTxt"/>

        <View
            android:id="@+id/resultView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/employeeImage3"
            app:layout_constraintStart_toStartOf="@+id/employeeImage3"
            app:layout_constraintTop_toTopOf="@+id/employeeImage3"
            app:layout_constraintEnd_toEndOf="@id/employeeImage3"/>

    </FrameLayout>

    <!--4-->
    <FrameLayout
        android:id="@+id/frame4"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/frame6"
        app:layout_constraintEnd_toEndOf="@id/frame2"
        app:layout_constraintTop_toBottomOf="@+id/frame2">

        <ImageView
            android:id="@+id/employeeImage4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/face_ic_dark"
            android:contentDescription="@string/employeeImage4DescTxt"/>

        <View
            android:id="@+id/resultView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

    <!--5-->
    <FrameLayout
        android:id="@+id/frame5"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/frame3"
        app:layout_constraintTop_toBottomOf="@+id/frame3">

        <ImageView
            android:id="@+id/employeeImage5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/face_ic_dark"
            android:contentDescription="@string/employeeImage5DescTxt"/>

        <View
            android:id="@+id/resultView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

    <!--6-->
    <FrameLayout
        android:id="@+id/frame6"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/frame4"
        app:layout_constraintTop_toBottomOf="@+id/frame4">

        <ImageView
            android:id="@+id/employeeImage6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/face_ic_dark"
            android:contentDescription="@string/employeeImage6DescTxt"/>

        <View
            android:id="@+id/resultView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>