<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity.MainActivity"
    android:background="@drawable/background_portrait"
    android:id="@+id/container"
    android:paddingStart="@dimen/mainMenuPaddingPortrait"
    android:paddingEnd="@dimen/mainMenuPaddingPortrait"
    android:paddingBottom="@dimen/mainMenuPaddingPortrait">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainMenuInstructions"
        android:textColor="@color/offWhite"
        app:layout_constraintBottom_toTopOf="@+id/practiceModeBtn"
        app:layout_constraintEnd_toEndOf="@+id/practiceModeBtn"
        app:layout_constraintStart_toStartOf="@+id/practiceModeBtn"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/practiceModeBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/practiceModeBtnTxt"
        android:contentDescription="@string/practiceModeBtnTxt"
        app:layout_constraintBottom_toTopOf="@+id/timedModeBtn"
        app:layout_constraintEnd_toEndOf="@+id/timedModeBtn"
        app:layout_constraintStart_toStartOf="@+id/timedModeBtn"
        android:layout_marginBottom="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:cornerRadius="13dp"
        app:backgroundTint="@color/colorAccent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/timedModeBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/timedModeBtnTxt"
        android:contentDescription="@string/timedModeBtnTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:cornerRadius="13dp"
        app:backgroundTint="@color/colorAccent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
